--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
 		"./processor/extender": "./processor/extender/index.js",
 		"./processor/extender/preprocessor": "./processor/extender/preprocessor/index.js",
 		"./processor/extender/preprocessor/singly": "./processor/extender/preprocessor/singly.js",
-		"./sourcemap": "./sourcemap/index.js",
-		"./registries": "./registries/index.js"
+		"./source-map": "./sourcemap/index.js",
+		"./registry": "./registry/index.js"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -66,6 +66,7 @@
 	},
 	"homepage": "https://github.com/yourusername/beyond-js-bundles-sdk#readme",
 	"dependencies": {
+		"@beyond-js/code": "^0.0.1",
 		"@beyond-js/crc32": "^0.0.1",
 		"@beyond-js/equal": "^0.0.1",
 		"@beyond-js/fs": "^0.0.1",
