refactor: update requires to use external packages after modularizing code

--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
 	"name": "@beyond-js/bundles-sdk",
-	"version": "1.0.3",
+	"version": "1.0.6",
 	"description": "BeyondJS Bundles SDK",
 	"main": "index.js",
 	"types": "index.d.ts",
 	"exports": {
 		".": "./index.js",
-		"./dependencies/dependency": "./dependencies/dependency.js",
-		"./dependencies/propagator": "./dependencies/propagator.js",
+		"./dependencies/dependency": "./dependencies/dependency/index.js",
+		"./dependencies/propagator": "./dependencies/propagator/index.js",
 		"./bundle": "./bundle/index.js",
-		"./bundle/packager": "./bundle/packager.js",
-		"./bundle/packager/code/base": "./bundle/packager/code/base.js",
-		"./bundle/packager/code/js": "./bundle/packager/code/js.js",
-		"./bundle/packager/code/css": "./bundle/packager/code/css.js",
-		"./bundle/packager/dependencies": "./bundle/packager/dependencies.js",
+		"./bundle/packager": "./bundle/packager/index.js",
+		"./bundle/packager/code/base": "./bundle/packager/code/base/index.js",
+		"./bundle/packager/code/js": "./bundle/packager/code/js/index.js",
+		"./bundle/packager/code/css": "./bundle/packager/code/css/index.js",
+		"./bundle/packager/dependencies": "./bundle/packager/dependencies/index.js",
 		"./bundles": "./bundles/index.js",
-		"./bundles/config": "./bundles/config.js",
-		"./txt/bundle": "./txt/bundle.js",
-		"./txt/transversal": "./txt/transversal.js",
+		"./bundles/config": "./bundles/config/index.js",
+		"./txt/bundle": "./txt/bundle/index.js",
+		"./txt/transversal": "./txt/transversal/index.js",
 		"./transversal": "./transversal/index.js",
-		"./transversal/packager/dependencies": "./transversal/packager/dependencies.js",
+		"./transversal/packager/dependencies": "./transversal/packager/dependencies/index.js",
 		"./transversal/packager": "./transversal/packager/index.js",
-		"./transversal/packager/code": "./transversal/packager/code.js",
+		"./transversal/packager/code": "./transversal/packager/code/index.js",
 		"./processor/base": "./processor/base/index.js",
 		"./processor/base/dependencies/sources": "./processor/base/dependencies/sources.js",
 		"./processor/base/hashes": "./processor/base/hashes.js",
 		"./processor/base/sources": "./processor/base/sources/index.js",
 		"./processor/base/sources/hashes": "./processor/base/sources/hashes.js",
+		"./processor/base/sources/options": "./processor/base/sources/options/index.js",
 		"./processor/source": "./processor/source/index.js",
 		"./processor/source/compiled": "./processor/source/compiled.js",
-		"./processor/base/sources/options": "./processor/base/sources/options.js",
 		"./processor/base/analyzer": "./processor/base/analyzer/index.js",
 		"./processor/base/analyzer/singly": "./processor/base/analyzer/singly.js",
-		"./processor/base/analyzer/source": "./processor/base/analyzer/source.js",
+		"./processor/base/analyzer/source": "./processor/base/analyzer/source/index.js",
 		"./processor/base/dependencies/analyzer": "./processor/base/dependencies/analyzer.js",
 		"./processor/packager": "./processor/packager/index.js",
 		"./processor/packager/compiler": "./processor/packager/compiler/index.js",
-		"./processor/packager/compiler/singly": "./processor//processor/packager/compiler/singly/compiler/singly.js",
+		"./processor/packager/compiler/singly": "./processor/packager/compiler/singly.js",
 		"./processor/packager/compiler/children": "./processor/packager/compiler/children.js",
 		"./processor/packager/code": "./processor/packager/code/index.js",
 		"./processor/packager/code/singly": "./processor/packager/code/singly.js",
-		"./processor/packager/declaration": "./processor/packager/declaration.js",
+		"./processor/packager/declaration": "./processor/packager/declaration/index.js",
 		"./processor/extender": "./processor/extender/index.js",
 		"./processor/extender/preprocessor": "./processor/extender/preprocessor/index.js",
 		"./processor/extender/preprocessor/singly": "./processor/extender/preprocessor/singly.js",
@@ -68,10 +68,18 @@
 	"dependencies": {
 		"@beyond-js/code": "^0.0.1",
 		"@beyond-js/crc32": "^0.0.1",
+		"@beyond-js/dynamic-processor": "^0.0.3",
 		"@beyond-js/equal": "^0.0.1",
 		"@beyond-js/fs": "^0.0.1",
 		"@beyond-js/ipc": "^0.0.2",
-		"@beyond-js/md5": "^0.0.1"
+		"@beyond-js/md5": "^0.0.1",
+		"@beyond-js/mformat": "^0.0.3",
+		"@beyond-js/finder": "0.0.6",
+		"clean-css": "^5.3.0",
+		"uglify-js": "^3.16.2",
+		"source-map": "^0.7.4",
+		"sqlite3": "^5.0.8",
+		"concat-with-sourcemaps": "^1.1.0"
 	},
 	"engines": {
 		"node": ">=14.0.0"
