--- a/package.json
+++ b/package.json
@@ -70,16 +70,16 @@
 		"@beyond-js/crc32": "^0.0.1",
 		"@beyond-js/dynamic-processor": "^0.0.3",
 		"@beyond-js/equal": "^0.0.1",
+		"@beyond-js/finder": "0.0.6",
 		"@beyond-js/fs": "^0.0.1",
-		"@beyond-js/ipc": "^0.0.2",
+		"@beyond-js/ipc": "^0.0.7",
 		"@beyond-js/md5": "^0.0.1",
 		"@beyond-js/mformat": "^0.0.3",
-		"@beyond-js/finder": "0.0.6",
 		"clean-css": "^5.3.0",
-		"uglify-js": "^3.16.2",
+		"concat-with-sourcemaps": "^1.1.0",
 		"source-map": "^0.7.4",
 		"sqlite3": "^5.0.8",
-		"concat-with-sourcemaps": "^1.1.0"
+		"uglify-js": "^3.16.2"
 	},
 	"engines": {
 		"node": ">=14.0.0"
