--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
 		"bundles",
 		"sdk"
 	],
-	"author": "Your Name or Organization",
-	"license": "SEE LICENSE IN LICENSE",
+	"author": "BeyondJS",
+	"license": "MIT",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/yourusername/beyond-js-bundles-sdk.git"
@@ -72,7 +72,7 @@
 		"@beyond-js/equal": "^0.0.1",
 		"@beyond-js/finder": "0.0.6",
 		"@beyond-js/fs": "^0.0.1",
-		"@beyond-js/ipc": "^0.0.7",
+		"@beyond-js/ipc": "^0.0.8",
 		"@beyond-js/md5": "^0.0.1",
 		"@beyond-js/mformat": "^0.0.3",
 		"clean-css": "^5.3.0",
